# oto

./: README.md
backend/api/user_api/: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  wait.txt
backend/api/user_api/app/: config.py  tasks.py
backend/api/user_api/app/agent/: abstract_agent.py  conversation_agent.py  extractor.py  profile_generator.py
backend/api/user_api/app/agent/models/: __init__.py  gemini.py  openai.py
backend/api/user_api/app/domain/domain_service/: i_embedder.py  i_sound_quality_evaluator.py  i_transcriber.py  i_voice_activity_detector.py  mock_voice_activity_ratio.py
backend/api/user_api/app/domain/object/: conversation.py  embedding.py  user_profile.py
backend/api/user_api/app/domain/repository/: i_conversation_audio_repository.py  i_conversation_repository.py
backend/api/user_api/app/infrastructure/domain_service/: jina_embedder.py  openai_transcriber.py
backend/api/user_api/app/infrastructure/handler/: jina_handler.py  openai_handler.py  supabase_handler.py
backend/api/user_api/app/infrastructure/repository/: sqlite_user_context_repository.py  supabase_conversation_audio_repository.py  (+2 more)
backend/api/user_api/app/lib/: oto_contract.py  oto_idl.json
backend/api/user_api/app/presentation/: router.py
backend/api/user_api/app/usecase/: analyze_conversation.py  store_conversation.py  store_conversation_audio.py  usecase.py
backend/api/user_api/docker/: Dockerfile
backend/api/user_api/example-data/: emma-watson.txt
backend/api/user_api/nginx/conf.d/: api.conf
docs/: openapi.json
(+297 files in other folders)
