[project]
name = "voice-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.1",
    "openai>=1.75.0",
    "loguru>=0.7.3",
    "supabase>=2.15.0",
    "requests>=2.32.3",
    "celery>=5.5.2",
    "redis>=5.2.1",
    "python-multipart>=0.0.20",
    "agno>=1.4.2",
    "sqlalchemy>=2.0.40",
    "google-genai>=1.12.1",
    "solana>=0.36.6",
    "solder>=0.0.1",
    "anchorpy>=0.21.0",
]
